docker file updated

--- a/Auth.Api/Auth.Api.csproj
+++ b/Auth.Api/Auth.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>82199310-4769-4911-b247-ebc07ace9fb7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
