--- a/Auth.Api/Dockerfile
+++ b/Auth.Api/Dockerfile
@@ -1,14 +1,16 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["Auth.Api.csproj", ""]
-
-RUN dotnet restore "Auth.Api.csproj"
+RUN dotnet restore "./Auth.Api.csproj"
 COPY . .
-WORKDIR "/src/"
+WORKDIR "/src/."
 RUN dotnet build "Auth.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
