--- a/Auth.Api/appsettings.Development.json
+++ b/Auth.Api/appsettings.Development.json
@@ -13,5 +13,12 @@
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+  "GatewayBaseURL": "http://localhost:5000/api/",
+  "ServiceConfig": {
+    "serviceDiscoveryAddress": "http://localhost:8500",
+    "serviceName": "Auth.Api",
+    "serviceId": "1",
+    "serviceAddress": "http://localhost:5001"
   }
 }
